test/good/generics/variadic02.px

func join(...strings, sep = "") def
    return strings.join(sep)

print join("qwe", 'r', "ty")
print join('x', 'y', 'z', sep = '.')
print join()
print join(sep = "---")
