test/bad/functions/return03.px

func f() def
    return 'r'

f()
